# the-analyst

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SETUP.md  codecov.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: arabic-nlp.md  insights.md  modeling.md  orchestrator.md  report.md  retrieval.md  statistical.md  transform.md  visualization.md  workspace-janitor.md
.claude/commands/: analyze.md  forecast.md  ingest.md  report.md  sentiment.md
.claude/hooks/PostToolUse/: verify-output.sh
.claude/hooks/PreToolUse/: check-dangerous-commands.sh  validate-path.sh
.github/workflows/: ci.yml
memory/: context.md
memory/data/: mistakes.json  preferences.json
scripts/: setup-db.sh  verify-analysis.sh  verify-boris-compliance.sh  verify-data-integrity.sh
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  arabic_nlp.py  base.py  insights.py  modeling.py  report.py  retrieval.py  statistical.py  transform.py  visualization.py
src/database/: __init__.py  client.py  models.py
src/middleware/: __init__.py  audit.py  autonomy.py  cost_tracking.py
src/models/: __init__.py  schemas.py
src/orchestrator/: __init__.py  main.py  router.py  state.py
src/prompts/: __init__.py  agents.py  orchestrator.py
src/tools/: __init__.py  data_loaders.py  statistics.py
src/utils/: __init__.py  logging.py  notifications.py  obsidian.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_agents/: test_arabic_nlp.py  test_base.py  test_insights.py  test_modeling.py  test_report.py  test_retrieval.py  test_statistical.py  test_transform.py  test_visualization.py
tests/test_database/: __init__.py  test_client.py  test_models.py
tests/test_integration/: __init__.py  test_e2e.py
tests/test_middleware/: __init__.py  test_audit.py  test_autonomy.py  test_cost_tracking.py
tests/test_models/: __init__.py  test_schemas.py
tests/test_orchestrator/: test_main.py  test_router.py
tests/test_tools/: __init__.py  test_data_loaders.py  test_statistics.py
tests/test_utils/: test_logging.py  test_notifications.py  test_obsidian.py
