[project]
name = "the-analyst"
version = "1.0.0"
description = "AI-powered analytics orchestration system for media companies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Head of Product & Analytics" }
]

dependencies = [
    # Core
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",

    # Statistics
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",

    # Visualization
    "plotly>=5.18.0",
    "kaleido>=0.2.0",

    # Reports
    "python-pptx>=0.6.21",
    "jinja2>=3.1.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",

    # Async & HTTP
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",

    # Utilities
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
arabic = [
    # Arabic NLP (install separately: pip install -e ".[arabic]")
    "camel-tools>=1.5.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
reports = [
    # PDF generation (requires system dependencies)
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "safety>=2.3.0",
    "mutmut>=2.4.0",
]
all = [
    "the-analyst[arabic,reports,dev]",
]

[project.scripts]
analyst = "src.orchestrator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501: line too long - allow slightly longer lines for readability
# N806: X is standard ML convention for feature matrices
# N818: ConstraintViolation is intentional naming
ignore = ["E501", "N806", "N818"]

[tool.ruff.lint.per-file-ignores]
# Optional dependencies are imported for availability checking
"src/agents/arabic_nlp.py" = ["F401"]
# Tests often have unused variables from mocks
"tests/*" = ["F841"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=84",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Custom pytest marks for test categorization
markers = [
    "critical: Tests that must always pass - high coverage priority",
    "integration: End-to-end workflow tests spanning multiple agents",
    "slow: Tests that take longer to run - can skip with -m 'not slow'",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 84
show_missing = true

# Per-module coverage thresholds (BORIS compliance: agent criticality levels)
# Note: These are enforced via Codecov flags in codecov.yml
# agents/ and orchestrator/ → 90% (critical path)
# utils/ → 80% (support code)

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B101: assert usage (ok in tests)
# B110: try-except-pass (intentional silent handling in our case)
# B404: import subprocess (required for desktop notifications)
# B603: subprocess without shell (we use safe list args, not shell=True)
# B607: partial path (acceptable for system commands like osascript, notify-send)
skips = ["B101", "B110", "B404", "B603", "B607"]

# Mutation testing configuration
[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "pytest -x --tb=no -q"
dict_synonyms = "Faker"
# Initial threshold - aim for 60% mutation score
# This measures test QUALITY, not just coverage quantity
